.k8s/website-ingress-staging.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: schematio-website
  namespace: staging
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - staging.schemat.io
    secretName: website-certificate
  rules:
  - host: staging.schemat.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website
            port:
              number: 80
